--- a/contact.html
+++ b/contact.html
@@ -33,14 +33,14 @@
                 <li class="nav-item">
                     <a class="nav-link" href="products.html">Products </a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Transport</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="transport.html">Transport</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About us</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="contact.html">Contact</a>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Contact</a>
                 </li>
                 
             </ul>
@@ -50,17 +50,49 @@
 
        <div class="container">
            <div class="row pad50">
-           <div class="col-md-6">
-               <h1><span style="font-weight: 900">We are ipsum fluence</span></h1><br><br>
-               <p>Consectetur adipisicing elit. Eius, non, nemo! Nulla impedit nostrum debitis laborum illum in asperiores, autem blanditiis earum minus velit ullam fuga ipsam sed explicabo aliquid molestias consectetur dolorem dolor a quaerat. Cumque nobis, mollitia quia!</p><br>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur, dicta possimus aliquid quaerat in recusandae odit aut perspiciatis quidem impedit unde accusantium consequatur hic consectetur quas veniam nihil. Rerum magni illum dignissimos nam repudiandae inventore cum aliquam recusandae libero voluptate omnis harum deserunt in distinctio et dolorum excepturi facilis minima earum, assumenda dicta, cumque, ad optio. Quis ducimus quia excepturi praesentium id, dolores provident accusamus perferendis, magnam blanditiis possimus. Iusto maxime voluptatibus fuga quae fugiat ipsa laborum nisi quia.</p>
+           <div class="col-md-12 center">
+               <h1><span style="font-weight: 900">Let's talk with us</span></h1><br>
+               <form action="">
+                   <input type="text" value="*Your Name" class="cont">
+                   <input type="email" value="*Your Email" class="cont"> <br>
+                   <textarea type="message" class="cont2"></textarea><br>
+                   <input type="submit" value="Get in Touch" class="butt">
+               </form>
            </div>
-           <div class="col-md-6">
-               <h1><span style="font-weight: 900">We are flexible</span></h1><br><br>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur commodi sunt, incidunt numquam quam ut cumque nemo excepturi saepe nam quibusdam pariatur suscipit neque, adipisci non est, ullam eius vitae tenetur rerum perferendis doloribus quas. Tempore impedit tenetur, in molestias laudantium, laboriosam voluptas sit voluptates pariatur tempora modi, quae quia error dolor eos eius? Possimus consectetur optio id reiciendis iure aspernatur! Ex ratione dignissimos labore ab officiis, aspernatur earum minima ipsam. Tempora tenetur magnam a, debitis suscipit esse laborum, quos nemo, nisi pariatur odio est atque at voluptates voluptatum soluta.</p>
+       </div>
+       <div class="row pad50">
+          <div class="col-md-12 center">
+           <h1><span style="font-weight: 900">Find us</span></h1><br>
+           
+           </div>       
+       </div>  
+       </div>   
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2167.9335998858473!2d-2.9776447589428394!3d51.11347941044612!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487208c3b001ad99%3A0xaea4c5d2c2f590b5!2sS+L+Precision+Engineering!5e0!3m2!1spl!2spl!4v1529227687055" width="100%" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
+       <div class="container">
+           <div class="row pad50">
+               <div class="col-md-3">
+                   <b>Company Address:</b><br>
+                    Unit 17 Small Industries estate,<br>
+                    River Lane, Dunwear,
+               </div>
+               <div class="col-md-3">
+                   <b>Company Number:</b> 09984152 <br>
+                   Companies House <br>
+                   Submisions Number: 037-700174
+               </div>
+               <div class="col-md-3">
+                   <b>Phone:</b> +44 7309 545 785 <br>
+                   <b>Email:</b>  office@westpack.co.uk <br>
+                   <b>Fax:</b>   +44 07741170061
+               </div>
+               <div class="col-md-3">
+                   <b>Sales Director</b>
+                   <p><b>Nick Tom</b>
+                   <b>Phone: </b>+44 7854 545 698
+                   <b>E-mail: </b>n.tom@westpack.com</p>
+               </div>
            </div>
        </div>  
-       </div>     
         <div class="footer pad50_25">
         <div class="container">
            <img src="img/logo.png" alt=""><br><br>
