--- a/about.html
+++ b/about.html
@@ -33,11 +33,11 @@
                 <li class="nav-item">
                     <a class="nav-link" href="products.html">Products </a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Transport</a>
-                </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="about.html">About us</a>
+                    <a class="nav-link" href="transport.html">Transport</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">About us</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="contact.html">Contact</a>
@@ -50,15 +50,17 @@
 
        <div class="container">
            <div class="row pad50">
+           <div class="col-md-12"><center><h1 style="font-weight: 900">About us</h1></center> <br><br><br></div>
            <div class="col-md-6">
+              
                <h1><span style="font-weight: 900">We are ipsum fluence</span></h1><br><br>
                <p>Consectetur adipisicing elit. Eius, non, nemo! Nulla impedit nostrum debitis laborum illum in asperiores, autem blanditiis earum minus velit ullam fuga ipsam sed explicabo aliquid molestias consectetur dolorem dolor a quaerat. Cumque nobis, mollitia quia!</p><br>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur, dicta possimus aliquid quaerat in recusandae odit aut perspiciatis quidem impedit unde accusantium consequatur hic consectetur quas veniam nihil. Rerum magni illum dignissimos nam repudiandae inventore cum aliquam recusandae libero voluptate omnis harum deserunt in distinctio et dolorum excepturi facilis minima earum, assumenda dicta, cumque, ad optio. Quis ducimus quia excepturi praesentium id, dolores provident accusamus perferendis, magnam blanditiis possimus. Iusto maxime voluptatibus fuga quae fugiat ipsa laborum nisi quia.</p>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis pariatur, dicta possimus aliquid quaerat in recusandae odit aut perspiciatis quidem impedit unde accusantium consequatur hic consectetur quas veniam nihil. Rerum magni illum dignissimos nam repudiandae inventore cum aliquam recusandae libero voluptate omnis harum deserunt in distinctio et dolorum excepturi facilis minima earum, assumenda dicta, cumque, ad optio. Quis ducimus quia excepturi praesentium id, dolores provident accusamus perferendis, magnam blanditiis possimus. Iusto maxime voluptatibus fuga quae fugiat ipsa laborum nisi quia.</p><br>
            </div>
            <div class="col-md-6">
                <h1><span style="font-weight: 900">We are flexible</span></h1><br><br>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur commodi sunt, incidunt numquam quam ut cumque nemo excepturi saepe nam quibusdam pariatur suscipit neque, adipisci non est, ullam eius vitae tenetur rerum perferendis doloribus quas. Tempore impedit tenetur, in molestias laudantium, laboriosam voluptas sit voluptates pariatur tempora modi, quae quia error dolor eos eius? Possimus consectetur optio id reiciendis iure aspernatur! Ex ratione dignissimos labore ab officiis, aspernatur earum minima ipsam. Tempora tenetur magnam a, debitis suscipit esse laborum, quos nemo, nisi pariatur odio est atque at voluptates voluptatum soluta.</p>
-           </div>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur commodi sunt, incidunt numquam quam ut cumque nemo excepturi saepe nam quibusdam pariatur suscipit neque, adipisci non est, ullam eius vitae tenetur rerum perferendis doloribus quas. Tempore impedit tenetur, in molestias laudantium, laboriosam voluptas sit voluptates pariatur tempora modi, quae quia error dolor eos eius? Possimus consectetur optio id reiciendis iure aspernatur! Ex ratione dignissimos labore ab officiis, aspernatur earum minima ipsam. Tempora tenetur magnam a, debitis suscipit esse laborum, quos nemo, nisi pariatur odio est atque at voluptates voluptatum <soluta class="br"></soluta></p>
+           </div><br>
        </div>  
        </div>     
         <div class="footer pad50_25">
