--- a/products.html
+++ b/products.html
@@ -34,13 +34,13 @@
                     <a class="nav-link" href="#">Products </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Transport</a>
+                    <a class="nav-link" href="transport.html">Transport</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About us</a>
+                    <a class="nav-link" href="about.html">About us</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="contact.html">Contact</a>
                 </li>
                 
             </ul>
