--- a/about.html
+++ b/about.html
@@ -49,8 +49,9 @@
     </nav>
 
        <div class="container">
-           <div class="row pad50">
-           <div class="col-md-12"><center><h1 style="font-weight: 900">About us</h1></center> <br><br><br></div>
+           <div class="row">
+           <div class="col-md-12">
+           <center><h1 style="font-weight: 900">About us</h1></center> <br><br><br></div>
            <div class="col-md-6">
               
                <h1><span style="font-weight: 900">We are ipsum fluence</span></h1><br><br>
@@ -59,10 +60,11 @@
            </div>
            <div class="col-md-6">
                <h1><span style="font-weight: 900">We are flexible</span></h1><br><br>
-               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur commodi sunt, incidunt numquam quam ut cumque nemo excepturi saepe nam quibusdam pariatur suscipit neque, adipisci non est, ullam eius vitae tenetur rerum perferendis doloribus quas. Tempore impedit tenetur, in molestias laudantium, laboriosam voluptas sit voluptates pariatur tempora modi, quae quia error dolor eos eius? Possimus consectetur optio id reiciendis iure aspernatur! Ex ratione dignissimos labore ab officiis, aspernatur earum minima ipsam. Tempora tenetur magnam a, debitis suscipit esse laborum, quos nemo, nisi pariatur odio est atque at voluptates voluptatum <soluta class="br"></soluta></p>
-           </div><br>
+               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur commodi sunt, incidunt numquam quam ut cumque nemo excepturi saepe nam quibusdam pariatur suscipit neque, adipisci non est, ullam eius vitae tenetur rerum perferendis doloribus quas. Tempore impedit tenetur, in molestias laudantium, laboriosam voluptas sit voluptates pariatur tempora modi, quae quia error dolor eos eius? Possimus consectetur optio id reiciendis iure aspernatur! Ex ratione dignissimos labore ab officiis, aspernatur earum minima ipsam. Tempora tenetur magnam a, debitis suscipit esse laborum, quos nemo, nisi pariatur odio est atque at voluptates voluptatum </p>
+           </div>
        </div>  
-       </div>     
+       </div>
+       <div class="pad50"></div>     
         <div class="footer pad50_25">
         <div class="container">
            <img src="img/logo.png" alt=""><br><br>
